# mini-rag

./: Cargo.toml  README.md
examples/: add_and_retrieve.rs
src/: document.rs  import.rs  lib.rs  naive.rs
