[package]
name = "mini-rag"
version = "0.2.0"
edition = "2021"
description = "A simple, 100% Rust implementation of a vector storage database with on disk persistency."
keywords = ["vector", "vectors", "database", "rag", "persistent"]
authors = ["Simone Margaritelli <evilsocket@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/evilsocket/mini-rag"
homepage = "https://github.com/evilsocket/mini-rag"

[dependencies]
anyhow = "1.0.86"
async-trait = "0.1.80"
bitcode = { version = "0.6.0", features = ["serde"] }
colored = "2.1.0"
glob = "0.3.1"
rayon = "1.10.0"
serde = { version = "1.0.203", features = ["derive"] }
sha256 = "1.5.0"
lopdf = { version = "0.32.0", optional = true }
stringreader = { version = "0.1.1", optional = true }

[dev-dependencies]
tokio = { version = "1.38.0", features = ["macros", "rt", "rt-multi-thread"] }
ollama-rs = "0.2.0"

[features]
default = ["pdf"]
pdf = ["dep:lopdf", "dep:stringreader"]

[profile.release]
lto = true        # Enable link-time optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations
panic = 'abort'   # Abort on panic
strip = true      # Strip symbols from binary*
